--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@vue-leaflet/vue-leaflet": "^0.9.0",
     "animate.css": "^4.1.1",
+    "axios": "^1.3.5",
     "core-js": "^3.8.3",
     "element-plus": "^2.3.3",
-    "video.js": "^8.0.4",
+    "leaflet": "^1.9.3",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
