--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "animate.css": "^4.1.1",
     "axios": "^1.3.5",
     "core-js": "^3.8.3",
+    "echarts": "^5.4.2",
     "element-plus": "^2.3.3",
     "leaflet": "^1.9.3",
     "vue": "^3.2.13",
